# Hyprprev

./: CMakeLists.txt  README.md  main.c
include/: messages.h  options_args.h  quickexec.h  use_clipboard.h  use_file.h
src/: messages.c  options_args.c  quickexec.c  use_clipboard.c  use_file.c
